# media-organizer

./: .env.example  .gitignore  GraphRAG_idea.md  README.md  comments_for_cop_instr.md  docker-compose.yml
.github/: GH_Copilot_instructions.md  copilot-instructions.md
apps/api/: main.py  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  db.py
apps/api/app/routers/: assets.py  config.py  health.py  jobs.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx
apps/web/app/asset/[id]/: page.tsx
apps/web/app/jobs/: page.tsx
apps/web/app/places/: page.tsx
apps/web/app/review/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/gallery/: asset-card.tsx  filter-bar.tsx  gallery-view.tsx
apps/web/components/layout/: app-shell.tsx  sidebar.tsx  topbar.tsx
apps/web/components/maps/: places-map.tsx
apps/web/lib/: api.ts
apps/worker/: main.py  pyproject.toml
config/: default.yaml  local.yaml.example
docs/: AI agent improvement task.md  forensic_media_organizer_prd_v2.md  forensic_media_v1_issues.md
prompts/: image_v1.txt
scripts/: api-start.sh  db-migrate.sh  db-start.sh  dev.sh  web-start.sh
